# beth-parser

./: Makefile  README.md  pyproject.toml
app/: cmd.py  settings.py  utils.py
app/dto/: annotations.py  exceptions.py
app/dto/entities/: base.py  product.py
app/lib/: anti_captcha.py  sitemap.py
app/repository/: parser.py
app/repository/db/: base.py  db.py  mongodb.py  products.py
app/services/: beth.py  service.py
tests/units/: test_main.py
